# CyberCore

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEX.md  CONTRIBUTING.md  LICENSE.md  PROJECT_STATE.md  README.md  SECURITY.md  VISION.md  WORKLOG.md  pyproject.toml  roadmap.md
.cybercore/: project.yaml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: knowledge-validation.yml
agents/: README.md
assets/brand/: README.md
automation/ansible/: README.md
automation/docker/: README.md
automation/scripts/: README.md
automation/terraform/: README.md
demos/: uc-001-reality-to-evidence.sh  uc_001_reality_to_evidence.py
docs/: glossary.md  governance.md  identity.md  manifesto.md  manual-actions.md  public-readiness.md  risk-register.md
docs/adr/: 0001-use-cybercore-as-control-plane.md  0002-cybercore-identity-freeze.md  0003-provider-framework-and-interserver-v0.1.md  0004-cxp-artifact-format-v1.md
docs/architecture/: initial-context.md  reference-architecture-v2.md
docs/audits/: 2026-07-system-coherence-audit.md  cybercore-genome.v0.yaml
docs/design-system/: README.md
docs/releases/: v0.1.0-alpha.1.md  v0.1.0.md
docs/runbooks/: revoke-interserver-api-key.md
docs/specifications/: cxp-0001-package-format.md  cxp-0002-runtime.md  cxp-0003-publisher.md  cxp-0004-git-integration.md  cxp-v1.md
docs/use-cases/: README.md  UC-001-reality-to-evidence.md
examples/cxp/: manifest.valid.json  metadata.valid.json
foundation/: DECISION_MODEL.md  ENGINEERING_METHOD.md  FOUNDATIONS.md  KNOWLEDGE_MODEL.md  TERMINOLOGY.md
knowledge/: README.md
knowledge/engine/: KNOWLEDGE_ENGINE.md  schema.yaml
knowledge/registry/: README.md  inventory.yaml  schema.yaml
monitoring/: README.md
schemas/: cxp-manifest-v1.schema.json  cxp-metadata-v1.schema.json
scripts/: record-demo.sh
security/: README.md
src/cybercore/: __init__.py  __main__.py  artifact.py  cli.py  config.py  demo.py  discovery.py  events.py  evidence.py  learn.py  (+10 more)
tests/: test_apply.py  test_artifact.py  test_cli.py  test_doctor_registry.py  test_knowledge_validator.py  test_planner.py  test_policy_risk.py  test_registry.py  test_registry_graph.py  test_runtime.py  test_transport.py  test_workblock.py
(+24 files in other folders)
