[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cybercore"
version = "0.1.0"
description = "Infrastructure Context & Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "License pending; Apache-2.0 recommended" }
authors = [
  { name = "CyberDJS" }
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
  "respx>=0.21,<1",
  "ruff>=0.6,<1",
]

[project.scripts]
cybercore = "cybercore.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cybercore"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
