[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cybercore"
version = "0.1.0a1"
description = "Infrastructure Context & Intelligence Platform runtime"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "CyberDJS" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cybercore = "cybercore.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cybercore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
