[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cybercore"
version = "0.1.0"
description = "Infrastructure Context & Intelligence Platform runtime"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CyberDJS" }]
dependencies = ["zstandard>=0.23"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jsonschema>=4.23"]

[project.scripts]
cybercore = "cybercore.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cybercore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
